--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -16,13 +16,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # It is important to install java before installing clojure tools which needs java
-      # exclusions: babashka, clj-kondo and cljstyle
       - name: Prepare java
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '8'
+          java-version: '11'
 
       - name: Install clojure tools
         uses: DeLaGuardo/setup-clojure@11.0
