--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -1,4 +1,4 @@
-name: Example workflow
+name: Setup Clojure
 
 on: [push]
 
@@ -36,6 +36,16 @@ jobs:
           # cmd-exe-workaround: 'latest' # Replaces `clojure` with `deps.clj` on Windows
           # zprint: 1.2.3                # zprint
 
+      - name: Uberjar
+        working-directory: ./health-record-app
+        run: lein uberjar
+
+      - uses: actions/upload-artifact@v3
+        working-directory: ./health-record-app
+        with:
+          name: ubarjar
+          path: target/health-record-app-0.1.0-SNAPSHOT-standalone.jar
+
       # Optional step:
       - name: Cache clojure dependencies
         uses: actions/cache@v3
@@ -50,6 +60,3 @@ jobs:
           # key: cljdeps-${{ hashFiles('project.clj') }}
           # key: cljdeps-${{ hashFiles('build.boot') }}
           restore-keys: cljdeps-
-
-      - name: Get leiningen version
-        run: lein -v
