--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -65,6 +65,9 @@ jobs:
   docker-build:
     runs-on: ubuntu-latest
     needs: uberjar
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
