--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -57,6 +57,12 @@ jobs:
           key: cljdeps-${{ hashFiles('health-record-app/project.clj') }}
           # key: cljdeps-${{ hashFiles('build.boot') }}
           restore-keys: cljdeps-
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: uberjar
+          path: health-record-app/target/health-record-app-0.1.0-SNAPSHOT-standalone.jar
+
   docker-build:
     runs-on: ubuntu-latest
     needs: uberjar
@@ -64,6 +70,11 @@ jobs:
       contents: read
       packages: write
     steps:
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: my-artifact
+          path: health-record-app/target/health-record-app-0.1.0-SNAPSHOT-standalone.jar
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
