--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -70,6 +70,8 @@ jobs:
       contents: read
       packages: write
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - uses: actions/download-artifact@v3
         with:
@@ -92,7 +94,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: "{{defaultContext}}:health-record-app"
+          context: .
+          file: health-record-app/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
