--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: iku000888/health-record-api:latest
+        image: ghcr.io/iku000888/health-record-api:main
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
