--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -13,11 +13,17 @@ jobs:
 
   uberjar:
 
-    runs-on: openjdk:11-jre-slim
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Prepare java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '11'
 
       - name: Install clojure tools
         uses: DeLaGuardo/setup-clojure@11.0
