--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Prepare java
         uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
+          distribution: 'corretto'
           java-version: '11'
 
       - name: Install clojure tools
