--- a/health-record-app/Dockerfile
+++ b/health-record-app/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncoretto:11.0.9
+FROM amazoncorretto:11.0.9
 WORKDIR /app
 COPY ./target/*-standalone.jar ./app.jar
 CMD ["java", "-jar", "app.jar"]
