--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -63,6 +63,16 @@ jobs:
           name: uberjar
           path: health-record-app/target/health-record-app-0.1.0-SNAPSHOT-standalone.jar
 
+      - name: Build frontend
+        working-directory: ./health-record-frontend
+        run: lein shadow build app
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: uberjar
+          path: health-record-frontend/public/js/compiled/main.js
+          target/health-record-app-0.1.0-SNAPSHOT-standalone.jar
+
   docker-build:
     runs-on: ubuntu-latest
     needs: uberjar
