--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -43,7 +43,7 @@ spec:
         - containerPort: 8080
         env:
           - name: DB_HOST
-            value: postgres
+            value: postgres-service
 
 ---
 
