--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -42,6 +42,8 @@ spec:
         ports:
         - containerPort: 8080
         env:
+          - name: CORS_ALLOW_ORIGIN
+            value: http://localhost:8080
           - name: DB_HOST
             value: postgres-service
 
@@ -115,6 +117,6 @@ spec:
     app: health-record-frontend
   ports:
     - protocol: TCP
-      port: 8080
+      port: 3000
       targetPort: 80
   type: NodePort
