--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -1,4 +1,7 @@
-.PHONY: cypress-open
+.PHONY: cypress-open run-headless
 
 cypress-open:
 	npx cypress open
+
+run-headless:
+	npx cypress run --browser chrome
