--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /health-record-frontend/package.json
 /health-record-frontend/public/js/
 *node_modules*
+/test/e2e/cypress/videos/
+/test/e2e/cypress/screenshots/
