--- a/test/pact/Makefile
+++ b/test/pact/Makefile
@@ -1,4 +1,4 @@
-.PHONY: pact-verify pact-shell pact-mock
+.PHONY: pact-verify pact-shell pact-stub
 
 pact-shell:
 	docker run --network host -it -v ${PWD}:/user-home --entrypoint sh docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0
@@ -9,8 +9,5 @@ pact-verify:
 pact-verify-without-setup:
 	docker run --network host -it -v ${PWD}:/user-home docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0 verify /user-home/pact.json --provider-base-url http://localhost:8080
 
-pact-mockk:
-	docker run -it --rm --name pact-mock-service -p 8080:8080 -v ${PWD}:/tmp/pacts docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0 stub-service -p 8080 --host 0.0.0.0 --pact-dir /tmp/pacts --provider=Provider --consumer=Consumer
-
-pact-mock:
-	docker run -it --rm --name pact-mock-service -p 8080:8080 -v ${PWD}:/tmp/pacts docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0 stub-service -p 8080 --host 0.0.0.0 /tmp/pacts/pact.json
+pact-stub:
+	docker run -it --rm --name pact-stub-service -p 8080:8080 -v ${PWD}:/tmp/pacts docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0 stub-service -p 8080 --host 0.0.0.0 /tmp/pacts/pact.json
