Pact frontend test WIP

--- a/test/pact/Makefile
+++ b/test/pact/Makefile
@@ -10,4 +10,4 @@ pact-verify-without-setup:
 	docker run --network host -it -v ${PWD}:/user-home docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0 verify /user-home/pact.json --provider-base-url http://localhost:8080
 
 pact-stub:
-	docker run -it --rm --name pact-stub-service -p 8080:8080 -v ${PWD}:/tmp/pacts docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0 stub-service -p 8080 --host 0.0.0.0 /tmp/pacts/pact.json
+	docker run -it --rm --name pact-stub-service -p 8080:8080 -v ${PWD}:/tmp/pacts docker.io/pactfoundation/pact-cli:0.53.0-pactcli0.52.0 stub-service -p 8080 --host 0.0.0.0 /tmp/pacts/pact.json --cors
