--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 *node_modules*
 /test/e2e/cypress/videos/
 /test/e2e/cypress/screenshots/
+/health-record-frontend/index.html
+/health-record-frontend/tests/
